--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 </div>
                 <div class="footer-col">
                     <h4>Newsletter</h4>
-                    <p>Subscribe to get the latest updates and offers.</p>
+                    <p>Subscribe to get our weekly cuisine updates and early bookings.</p>
                     <form class="newsletter-form">
                         <input type="email" placeholder="Your Email" required>
                         <button type="submit">Subscribe</button>
